Dark mode text fixed

--- a/dictionary_integration/style.css
+++ b/dictionary_integration/style.css
@@ -245,3 +245,11 @@ body {
     padding-left: 20px; /* adjust as needed */
     color: #ae9cff;
 }
+
+.dark-theme .word-example {
+    color: #ae9cff;
+    font-style: italic;
+    border-left: 5px solid #ae9cff;
+    padding-left: 20px;
+    margin-top: 30px;
+}
